5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1575_1560.log
== SUBMITION (2019-03-12 13:26:50) 
-- CODE:
string = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- EXECUTION TIME:
0.127546
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
ada lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:27:09) 
-- CODE:
string = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- OUTPUT:
ada lovelace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:27:12) 
-- CODE:
string = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- EXECUTION TIME:
0.225729
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
ada lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:27:21) 
-- CODE:
string = "Ada Lovelace foi a primeira programadora da historia."
print(string..lower())
-- EXECUTION TIME:
0.155323
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:27:24) 
-- CODE:
string = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- EXECUTION TIME:
0.201906
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
ada lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:27:26) 
-- CODE:
string = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- EXECUTION TIME:
0.140785
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
ada lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:27:51) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.203063
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
